# archforge

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.ko.md  README.md  SECURITY.md  action.yml  action_runner.py  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  run_benchmarks.py
corpus/: README.md  gen_malformed.py  gen_officecli.py  gen_powerpoint_native.py  gen_pptxgenjs.js  gen_python_pptx.py  run_corpus.py
corpus/malformed/: truncated.json  truncated.pptx  vertical_text.json  vertical_text.pptx
corpus/officecli/: clean_bilingual.json  clean_bilingual.pptx  e1_default_hangul.json  e1_default_hangul.pptx  e2_em_dash.json  e2_em_dash.pptx  e3_tiny_size.json  e3_tiny_size.pptx  e4_tracked_hangul.json  e4_tracked_hangul.pptx  w15_overlap.json  w15_overlap.pptx  w16_offcanvas.json  w16_offcanvas.pptx
corpus/powerpoint-native/: clean_bilingual_native.json  clean_bilingual_native.pptx  e1_arial_hangul_native.json  e1_arial_hangul_native.pptx  e4_tracked_hangul_native.json  e4_tracked_hangul_native.pptx
corpus/pptxgenjs/: clean_english.json  clean_english.pptx  em_dash_prose.json  em_dash_prose.pptx  hangul_fontface_arial.json  hangul_fontface_arial.pptx
corpus/python-pptx/: clean_bilingual.json  clean_bilingual.pptx  e1_arial_hangul.json  e1_arial_hangul.pptx  e2_em_dash.json  e2_em_dash.pptx  e2_range_negative.json  e2_range_negative.pptx  e3_4pt.json  e3_4pt.pptx  e4_tracked_hangul.json  e4_tracked_hangul.pptx  w15_overlap.json  w15_overlap.pptx  w16_offcanvas.json  w16_offcanvas.pptx  w1_small_body.json  w1_small_body.pptx  w6_repeated_skeleton.json  w6_repeated_skeleton.pptx  w8_small_cjk.json  w8_small_cjk.pptx
docs/: ACCURACY.md  CALIBRATION.md  EXCEPTION_AUDIT.md  HOW_IT_WORKS.md  ROADMAP.md  USAGE.md
docs/adr/: 001-core-vs-full-profiles.md  002-w18-incompleteness-contract.md  003-target-renderer.md  004-baseline-identity.md
docs/recipes/: claude-code.md  codex.md  github-actions.md  officecli.md  pptxgenjs.md
docs/rules/: E1.md  E2.md  E3.md  E4.md  W1.md  W10.md  W11.md  W12.md  W13.md  W14.md  W15.md  W16.md  W17.md  W18.md  W5.md  W6.md  W7.md  W8.md  W9.md
examples/: README.md  broken.pptx  broken_en.pptx  fixed.pptx  fixed_en.pptx  style_warnings.pptx
schemas/: baseline-3.schema.json  report-1.0.schema.json  report-2.0.schema.json  scan-2.0.schema.json
scripts/: check_version_consistency.py  make_accuracy_table.py  make_examples.py  make_rule_docs.py
skills/archforge-pptx-lint/: SKILL.md
skills/pptx-lint/: SKILL.md
src/archforge/: __init__.py  __main__.py  config.py  dashes.py  demo.py  findings.py  fixes.py  fonts.py  lint.py  messages.py  reporters.py  rules.py  scripts.py
src/archforge/skills/archforge-pptx-lint/: SKILL.md
src/aro/: __init__.py  lint.py
src/jangpyo/: __init__.py  lint.py
tests/: conftest.py  helpers.py  test_baseline_config.py  test_cli_contracts.py  test_engine_misc.py  test_lint.py  test_properties.py  test_rules_geometry.py  test_rules_structure.py  test_rules_typography.py  test_schemas.py
