[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aro"
version = "0.1.0"
description = "PPTX quality linter with Korean-typography awareness: catches silent font fallback, tracking damage, text collisions, off-canvas bleed, and AI-generated deck tells in built .pptx files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Minjae Kwon (Ash)" }]
dependencies = ["python-pptx>=1.0", "Pillow>=10"]
keywords = ["pptx", "powerpoint", "lint", "korean", "cjk", "presentation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Love-Ash/aro"

[project.scripts]
aro = "aro.lint:main"

[tool.setuptools.packages.find]
where = ["src"]
