[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "archforge"
version = "0.2.0"
description = "PPTX quality linter with Korean-typography awareness: catches silent font fallback, tracking damage, text collisions, off-canvas bleed, and AI-generated deck tells in built .pptx files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Minjae Kwon (Ash)" }]
dependencies = ["python-pptx>=1.0", "Pillow>=10"]
keywords = ["pptx", "powerpoint", "lint", "korean", "cjk", "presentation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Love-Ash/archforge"

[project.scripts]
archforge = "archforge.lint:main"

[tool.setuptools.packages.find]
where = ["src"]

# 스킬팩을 wheel에 동봉한다. skills/가 src/ 밖에만 있어 pip 사용자에게 SKILL.md가
# 안 딸려가던 배포 구멍의 교정(2026-07-10). 리포 루트 skills/는 발견용 사본이며
# 정본은 src/archforge/skills/(테스트가 두 파일 동일성을 회귀로 고정).
[tool.setuptools.package-data]
archforge = ["skills/archforge-pptx-lint/*.md"]
