[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "archforge"
version = "0.7.1"
description = "Preflight quality linter for AI-generated PowerPoint: catches silent font fallback (Hangul-deep, CJK-aware), tracking damage, text collisions, off-canvas bleed, and AI-generated deck tells in built .pptx files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Minjae Kwon (Ash)" }]
# python-pptx 상한: run._r 등 내부 API 의존이 있어 검증 안 된 메이저 업그레이드로부터 보호
# (3차 외부 리뷰 P1. 신규 메이저는 별도 검증 후 상한 상향)
dependencies = ["python-pptx>=1.0,<2", "Pillow>=10"]
keywords = ["pptx", "powerpoint", "lint", "korean", "cjk", "presentation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6"]
yaml = ["PyYAML>=6"]   # .archforge.yml 설정용(JSON 설정은 의존성 없이 항상 지원)

[project.urls]
Homepage = "https://github.com/Love-Ash/archforge"
Documentation = "https://github.com/Love-Ash/archforge#readme"
Changelog = "https://github.com/Love-Ash/archforge/blob/main/CHANGELOG.md"
Issues = "https://github.com/Love-Ash/archforge/issues"
Source = "https://github.com/Love-Ash/archforge"

[project.scripts]
archforge = "archforge.lint:main"

[tool.setuptools.packages.find]
where = ["src"]

# 스킬팩을 wheel에 동봉한다. skills/가 src/ 밖에만 있어 pip 사용자에게 SKILL.md가
# 안 딸려가던 배포 구멍의 교정(2026-07-10). 리포 루트 skills/는 발견용 사본이며
# 정본은 src/archforge/skills/(테스트가 두 파일 동일성을 회귀로 고정).
[tool.setuptools.package-data]
archforge = ["skills/archforge-pptx-lint/*.md"]
